--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -17,8 +17,9 @@
     <link href="{{ asset('css/style.css') }}" rel="stylesheet"/>
     {% block stylesheets %}
     {% endblock %}
-    <!-- jQuery core -->
+    <!-- jQuery core + libraries -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js"></script>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core + custom theme JS-->
@@ -47,7 +48,6 @@
         </div>
     </div>
 </nav>
-<!-- Page Header-->
 <header class="masthead" style="background-image: url('{{ asset('images/banner.png') }}')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
